examples/mood/tests/evaluate/add_an_enum.mood.expected
-----------------
INPUT
----------------- 
enum Foo {
    Bar
}
pub fn test(): f64 {
    Foo::Bar + 1.0_f64
}
-----------------
OUTPUT
-----------------
Error: Expected a number.:
 --> add_an_enum.mood:5:5

  | pub fn test(): f64 {
5 |     Foo::Bar + 1.0_f64
  |     ^^^^^^^^ This expression is not numeric.
  | }
