examples/mood/tests/evaluate/add_an_enum.mood
enum Foo {
    Bar
}
pub fn test(): f64 {
    Foo::Bar + 1.0_f64
}